# CS_G

./: .gitignore  README.md  pyproject.toml  solve.py
.github/workflows/: cov-pylint.yml  gh-sphinx.yml
docs/: classes.rst  conf.py  index.rst  main.rst  modules.rst  utils.rst
new_solutions/classes/: binary.py  challenge.py  engineer.py  engineers.py  feature.py  features.py  service.py
new_solutions/main/: parser.py  solver.py
new_solutions/solutions/: Diff-Services reverse.txt  Users-Services.txt
new_solutions/utils/: ratios.py  singleton.py  utils.py  writer.py
old_solutions/: functions.py  input.txt
tests/: test_input.py  test_output.py
