[tool.poetry]
name = "cs-g"
version = "0.1.0"
description = ""
authors = ["mohammedachbouk <flmusic2000@gmail.com>"]
readme = "README.md"
packages = [{include = "cs_g"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
black = "^22.10.0"
coverage = "^6.5.0"
pylint = "^2.15.5"
Sphinx = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
